--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,10 @@ header {
     font-weight: normal;
 }
 
+header nav li {
+    font-size: 20px;
+}
+
 
 
 header,
@@ -115,6 +119,69 @@ section p {
 
 .contato {
     padding: 24px;
+}
+
+.contato .container {
+    display: block;
+}
+
+.meios-contato {
+    display: flex;
+    justify-content: space-between;
+}
+
+.links-sociais img {
+    height: 45px;
+}
+
+.links-sociais li {
+    display: inline;
+    margin-right: 16px;
+}
+
+.links-sociais li a {
+    text-decoration: none;
+}
+
+section h3 {
+    margin-bottom: 24px;
+}
+
+form input,
+form textarea, 
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+
+}
+
+form textarea {
+    resize: none;
+}
+
+form button {
+    background-color: #3c3e37;
+    color: #ecf0f1;
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #0b225c;
+}
+
+input:focus, textarea:focus {
+    outline-color: #1c3169;
+}
+
+
+footer {
+    background-color: rgb(6, 29, 92);
+    color: #ecf0f1;
+    padding: 16px 0;
+    font-weight: normal;
 }
 
 
